tests/rosetta/out/Java/call-an-object-method.error
javac: exit status 1
/tmp/CallAnObjectMethod.java:28: error: cannot find symbol
        box.TellSecret();
           ^
  symbol:   method TellSecret()
  location: variable box of type Box
1 error
